# pixelLib

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  codecov.yml  qodana.sarif.json  qodana.yaml
.github/: copilot-instructions.md
.github/instructions/: header-files.instructions.md  makefile.instructions.md  test-files.instructions.md
.github/workflows/: build-test.yml  linux-unit-tests.yml  qodana_code_quality.yml
.jules/: bolt.md
.windsurf/rules/: pixellib.md
_codeql_build_dir/: CTestTestfile.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  json_test  logging_test
docs/: CLANG_TIDY.md
include/: filesystem.hpp  json.hpp  logging.hpp  network.hpp
include/interlaced_core/: json.hpp  logging.hpp  network.hpp
tests/: CMakeLists.txt  json_test.cc  logging_test.cc  test_filesystem.cc  test_json.cc  test_logging.cc  test_main.cc  test_network.cc  test_network_helpers.cc
tools/: get_doctest.sh  setup-clang-tidy.sh
